cleaned up code for faq recycler

--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -1,15 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="10dp"
     tools:context="com.example.cindy.esc_50005.UI.Course.FAQ.CourseActivity">
-
-    <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
-        xmlns:tools="http://schemas.Android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -27,108 +21,15 @@
                     android:id="@+id/item_question"
                     android:layout_alignParentTop="true"
                     android:textSize="25sp"/>
-                    <!--android:text="Why is the sky blue?"-->
-
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/item_answer"
                     android:layout_below="@+id/item_question"
                     android:layout_alignParentLeft="true" />
-                    <!--android:text="Because why not!"-->
 
-
-                <!--<ImageButton-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:id="@+id/arrow"-->
-                    <!--android:onClick="sendMessage"-->
-                    <!--android:src="@drawable/arrow" />-->
-
-                <!--<FrameLayout-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content">-->
-                    <!--<ImageButton-->
-                        <!--android:id="@+id/arrow"-->
-                        <!--android:layout_width="20dp"-->
-                        <!--android:layout_height="50dp"-->
-                        <!--/>-->
-                    <!--<ImageView-->
-                        <!--android:layout_width="30dp"-->
-                        <!--android:layout_height="30dp"-->
-                        <!--android:scaleType="fitXY"-->
-                        <!--android:src="@drawable/arrow">-->
-                    <!--</ImageView>-->
-                <!--</FrameLayout>-->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/replyTest"
-                    android:layout_alignParentRight="true"
-
-                    />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
-    <!--<android.support.v7.widget.CardView-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginTop="10dp"-->
-                <!--android:id="@+id/cv2"-->
-                <!--&gt;-->
-        <!--<RelativeLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:padding="16dp">-->
 
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/item_text2"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:textSize="25sp"-->
-                <!--android:text="What is the difference between Observer and Strategy Pattern?"-->
-                <!--/>-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/item_count2"-->
-                <!--android:layout_below="@+id/item_text2"-->
-                <!--android:layout_alignParentLeft="true"-->
-                <!--android:text="Blah blah blah!"-->
-                <!--/>-->
-
-        <!--</RelativeLayout>-->
-
-    <!--</android.support.v7.widget.CardView>-->
-    </LinearLayout>
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:text="hello_blank_fragment TWO!" />-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/item_image"-->
-        <!--android:layout_width="52dp"-->
-        <!--android:layout_height="52dp"-->
-        <!--android:padding="8dp"/>-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/item_text"-->
-        <!--android:padding="8dp"-->
-        <!--android:text="item name"-->
-        <!--android:textSize="32dp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/item_count"-->
-        <!--android:padding="8dp"-->
-        <!--android:text="0"-->
-        <!--android:textSize="32dp"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-
-</FrameLayout>
+</LinearLayout>
