--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -17,6 +17,14 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click Here!"
+        android:id="@+id/clickToGoToPostQuestion"
+        android:layout_alignParentRight="true"/>
+
+
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
