--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -16,6 +16,12 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click Here!"
+        android:id="@+id/clickToGoToPostQuestion"
+        android:layout_alignParentRight="true"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
