--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cindy.esc_50005.Database.questionFragment">
+    tools:context="com.example.cindy.esc_50005.Database.Database.questionFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
