--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Click Here!"
-        android:id="@+id/clickToGoToPostQuestion"
+        android:id="@+id/clickToGoToFAQ"
         android:layout_alignParentRight="true"/>
 
 
