--- a/app/src/main/res/layout/sessionquestions_postquestions_main.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_main.xml
@@ -1,13 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.cindy.esc_50005.UI.Session.SessionActivity">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv">
+        android:id="@+id/cv_input_qns">
 
         <RelativeLayout
             xmlns:tools="http://schemas.Android.com/tools"
@@ -30,15 +35,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"
-                android:textSize="20dp" />
+                android:textSize="20dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/cv"
-        android:id="@+id/recyclerViewQuestions"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/recyclerViewPostQuestions"></android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</FrameLayout>
