--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv"
+        android:id="@+id/cv2"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/item_post_question"
                 android:layout_alignParentTop="true"
-                android:textSize="25sp"/>
+                android:textSize="25dp"/>
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
