--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.cindy.esc_50005.MainActivity">
-    >
+    tools:context="com.example.cindy.esc_50005.UI.Course.FAQ.QuizFragment">
+
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Sessions"
-        android:id="@+id/newquizbox"/>
+        android:text=""
+        android:id="@+id/quizQuestionBox"/>
 
 </FrameLayout>
