--- a/app/src/main/res/layout/fragment_quiz.xml
+++ b/app/src/main/res/layout/fragment_quiz.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.cindy.esc_50005.UI.Course.FAQ.QuizFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/quizQuestionBox"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text=""
-        android:id="@+id/quizQuestionBox"/>
+        android:layout_marginTop="300dp"
+        android:text="Chinese food is good" />
 
 </FrameLayout>
