--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -2,35 +2,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
+    android:paddingBottom="8dp"
     tools:context="com.example.cindy.esc_50005.UI.Course.FAQ.CourseActivity">
 
-        <android.support.v7.widget.CardView
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/faq_cv"
+        style="@style/CardView.Light"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:cardUseCompatPadding="true"
+        tools:ignore="ContentDescription">
+
+        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/cv"
-            >
-            <RelativeLayout
-                android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/faq_tv_question"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="16dp">
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toTopOf="@+id/faq_tv_answer"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_question"
-                    android:layout_alignParentTop="true"
-                    android:textSize="25sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_answer"
-                    android:layout_below="@+id/item_question"
-                    android:layout_alignParentLeft="true"
-                    android:textSize="10sp"/>
+            <TextView
+                android:id="@+id/faq_tv_answer"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="Here is for the answer to the question which may have several lines"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#111111"
+                app:layout_constraintBottom_toTopOf="@+id/faq_tv_time"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/faq_tv_question" />
 
-            </RelativeLayout>
+            <TextView
+                android:id="@+id/faq_tv_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="01 March 2018"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#555555"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
 
-        </android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/faq_tv_upvote"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="01 March 2018"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#555555"
+                app:layout_constraintEnd_toStartOf="@id/faq_btn_upvote"
+                app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
+
+            <Button
+                android:id="@+id/faq_btn_upvote"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Upvote"
+                android:textColor="#114488"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
 
 </LinearLayout>
