--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -6,23 +6,95 @@
     android:paddingBottom="10dp"
     tools:context="com.example.cindy.esc_50005.UI.Session.SessionActivity">
 
+    <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:id="@+id/cv2"-->
+        <!--&gt;-->
+        <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:padding="16dp">-->
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/item_post_question"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:textSize="25dp"/>-->
+        <!--</RelativeLayout>-->
+
+    <!--</android.support.v7.widget.CardView>-->
     <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/post_question_cv"
+        style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv2"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:cardUseCompatPadding="true"
+        tools:ignore="ContentDescription"
         >
-        <RelativeLayout
+        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/item_post_question"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textColor="#000000"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
+                android:id="@+id/post_question_tv_time"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="01 March 2018"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#555555"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+
+            <TextView
+                android:id="@+id/post_question_tv_upvote"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:lineSpacingExtra="8dp"
+                android:text="01 March 2018"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="#555555"
+                app:layout_constraintEnd_toStartOf="@id/post_question_btn_upvote"
+                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+
+            <Button
+                android:id="@+id/post_question_btn_upvote"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/item_post_question"
-                android:layout_alignParentTop="true"
-                android:textSize="25dp"/>
-        </RelativeLayout>
+                android:layout_marginStart="8dp"
+                android:text="Upvote"
+                android:textColor="#114488"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+
+        </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
