--- a/app/src/main/res/layout/sessionquestions_postquestions_main.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_main.xml
@@ -42,6 +42,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:id="@+id/recyclerViewPostQuestions"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
