--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -1,5 +1,6 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,8 +26,7 @@
         <!--</RelativeLayout>-->
 
     <!--</android.support.v7.widget.CardView>-->
-    <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/post_question_cv"
         style="@style/CardView.Light"
@@ -36,11 +36,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:cardUseCompatPadding="true"
-        tools:ignore="ContentDescription"
-        >
+        tools:ignore="ContentDescription">
+
         <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/item_post_question"
                 android:layout_width="0dp"
@@ -55,22 +56,24 @@
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                android:id="@+id/post_question_tv_time"
+                android:id="@+id/post_question_tv_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
-                android:text="01 March 2018"
+                android:text="John"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#555555"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/post_question_tv_date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+                app:layout_constraintTop_toBottomOf="@+id/item_post_question"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/post_question_tv_upvote"
+                android:id="@+id/post_question_tv_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
