--- a/app/src/main/res/layout/content_session.xml
+++ b/app/src/main/res/layout/content_session.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.cindy.esc_50005.UI.Session.SessionActivity"
-    tools:showIn="@layout/activity_session">
+    tools:showIn="@layout/session_activity">
 
 </android.support.constraint.ConstraintLayout>
