--- a/app/src/main/res/layout/fragment_prof_question.xml
+++ b/app/src/main/res/layout/fragment_prof_question.xml
@@ -4,16 +4,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.cindy.esc_50005.UI.ProfSession.ProfQuestionFrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:id="@+id/recyclerViewProfQuestion"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/recyclerViewProfQn"></android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
