--- a/app/src/main/res/layout/fragment_prof_quiz.xml
+++ b/app/src/main/res/layout/fragment_prof_quiz.xml
@@ -4,10 +4,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.cindy.esc_50005.UI.ProfSession.ProfQuizFrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:id="@+id/recyclerViewProfQuiz"></android.support.v7.widget.RecyclerView>
+
+
 
 </FrameLayout>
