--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -16,12 +16,30 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click Here!"
-        android:id="@+id/clickToGoToPostQuestion"
-        android:layout_alignParentRight="true"/>
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar">
+    </android.support.v4.widget.DrawerLayout>
+
+    <ListView
+        android:id="@+id/navList"
+        android:layout_below="@+id/toolbar"
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left|start"
+        android:background="#ffeeeeee"/>
+
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Click Here!"-->
+        <!--android:id="@+id/clickToGoToPostQuestion"-->
+        <!--android:layout_alignParentRight="true"/>-->
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
