--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -15,6 +15,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:id="@+id/clickToGoSessionActivity"/>
+
     <fragment
         android:layout_marginTop="60dp"
         android:id="@+id/dashboardFragment"
