--- a/app/src/main/res/layout/session_activity.xml
+++ b/app/src/main/res/layout/session_activity.xml
@@ -17,12 +17,12 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Click Here!"
-        android:id="@+id/clickToGoToFAQ"
-        android:layout_alignParentRight="true"/>
+    <!--<Button-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Click Here!"-->
+        <!--android:id="@+id/clickToGoToFAQ"-->
+        <!--android:layout_alignParentRight="true"/>-->
 
 
     <android.support.design.widget.TabLayout
