Quiz adding screen still in progress

--- a/app/src/main/res/layout/activity_prof_session.xml
+++ b/app/src/main/res/layout/activity_prof_session.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".UI.ProfSession.ProfSessionActivity">
 
     <android.support.v7.widget.Toolbar
@@ -31,5 +32,13 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/proftab_layout"/>
+
+    <FrameLayout
+        android:id="@+id/profsessionhere"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:foregroundGravity="fill_horizontal"></FrameLayout>
 
 </RelativeLayout>
