--- a/app/src/main/res/layout/fragment_qnlist_edit.xml
+++ b/app/src/main/res/layout/fragment_qnlist_edit.xml
@@ -26,6 +26,16 @@
                 android:layout_marginTop="0dp"
                 android:id="@+id/recyclerViewQuizList"></android.support.v7.widget.RecyclerView>
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_add_black_24dp"
+                android:background="#e0e0e0"
+                android:id="@+id/addbutton"
+                android:layout_below="@id/recyclerViewQuizList"
+                />
+
 
         </RelativeLayout>
 
