--- a/app/src/main/res/layout/fragment_quiz_editor.xml
+++ b/app/src/main/res/layout/fragment_quiz_editor.xml
@@ -19,41 +19,85 @@
             android:orientation="vertical"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:id="@+id/questionEditor"
             >
 
-            <android.support.v7.widget.RecyclerView
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/question"/>
+
+            <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                android:id="@+id/recyclerViewQuizAdder"></android.support.v7.widget.RecyclerView>
+                android:id="@+id/radiobuttons">
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_add_black_24dp"
-                android:background="#e0e0e0"
-                android:id="@+id/addbutton"
-                android:layout_below="@id/recyclerViewQuizAdder"
+                <TableRow>
+                    <RadioButton
+                        android:id="@+id/option1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <EditText
+                        android:id="@+id/option1ans"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </TableRow>
 
-                />
+                <TableRow>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/option2"/>
+                    <EditText
+                        android:id="@+id/option2ans"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Submit"
-                android:id="@+id/submitbtn"
-                android:layout_below="@id/addbutton"
-                android:gravity="center_horizontal"
-                android:padding="10dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:background="#ffffff"
-                android:layout_marginTop="10dp"
-                />
+                </TableRow>
+
+                <TableRow>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/option3"/>
+                    <EditText
+                        android:id="@+id/option3ans"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+                </TableRow>
+
+                <TableRow>
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/option4"/>
+
+                    <EditText
+                        android:id="@+id/option4ans"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+                </TableRow>
+
+            </RadioGroup>
 
 
 
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            android:id="@+id/submitbtn"
+            android:layout_below="@id/questionEditor"
+            android:gravity="center_horizontal"
+            android:padding="10dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:background="#ffffff"
+            android:layout_marginTop="10dp"
+            />
 
     </RelativeLayout>
 
