--- a/app/src/main/res/layout/session_activity.xml
+++ b/app/src/main/res/layout/session_activity.xml
@@ -35,5 +35,13 @@
             android:layout_height="fill_parent"
             android:layout_below="@id/tab_layout"/>
 
+        <FrameLayout
+            android:id="@+id/profsessionhere"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:foregroundGravity="fill_horizontal"></FrameLayout>
+
 </RelativeLayout>
 
