Progress prof 90% fixed

--- a/app/src/main/res/layout/my_progress_main.xml
+++ b/app/src/main/res/layout/my_progress_main.xml
@@ -13,7 +13,7 @@
             android:layout_height="30dp"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="My Progress"/>
+            android:text="Progress"/>
 
         <!--<View-->
             <!--android:layout_width="match_parent"-->
