Fixed bugs in dashboard and session but might still have unknown bugs but working for now

--- a/app/src/main/res/layout/dashboard_activity.xml
+++ b/app/src/main/res/layout/dashboard_activity.xml
@@ -20,7 +20,7 @@
         android:id="@+id/dashboardFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.example.cindy.esc_50005.UI.Dashboard.ProfessorDashboardFragment"
+        class="com.example.cindy.esc_50005.UI.Dashboard.professor.ProfessorDashboardFragment"
         >
     </fragment>
 
