--- a/app/src/main/res/layout/profqn_recycler.xml
+++ b/app/src/main/res/layout/profqn_recycler.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="com.example.esc_50005.UI.ProfSession.ProfSessionActivity">
+    tools:context="com.example.esc_50005.UI.Session.Main.SessionActivity">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
